add brand now added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,9 @@
 <head>
   <title>Rick's Sneaker Shop</title>
   <meta charset="utf-8">
-  <title></title>
 </head>
 <body>
-<%= yield %>
+<h1>Rick's Sneaker Store</h1>
+  <%= yield %>
 </body>
 </html>
