--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -1,4 +1,7 @@
-<h1>Rick's Sneaker Store</h1>
+<a href="/">HOME</a>
+<a href="/brands/new">ADD BRAND</a>
+<a href="/models/new">ADD MODEL</a>
+
 <table style="width:100%">
 <section>
   <h2>All Stock</h2>
