add brand working with all brands showing

--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -1,1 +1,9 @@
-<p>add some models</p>
+<a href="/">HOME</a>
+
+<form method="post" action="/models">
+  <label for="model_name">Model Name:</label>
+    <input id="model_name" type="text" name="model_name" />
+    <label for="quantity">Quantity:</label>
+      <input id="quantity" type="number" name="quantity" />
+    <input type='submit' value="Submit"/>
+</form>
