--- a/views/brands/index.erb
+++ b/views/brands/index.erb
@@ -1,6 +1,3 @@
-<a href="/">HOME</a>
-<a href="/brands/new">ADD BRAND</a>
-<a href="/models/new">ADD MODEL</a>
 
 <a href="/">HOME</a>
 <a href="/brands/new">ADD BRAND</a>
@@ -8,24 +5,20 @@
 
 <table style="width:100%">
 <section>
-  <h2>All Stock</h2>
+  <h2>All Brands</h2>
   <table>
     <thead>
       <tr>
         <th>Brand Name</th>
-        <th>Model Name</th>
-        <th>Quantity</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
       <tr>
       </tr>
-      <% @models.each do |model| %>
+      <% @brand_name.each do |brand| %>
 
-        <td><%=model.brand.brand_name%></td>
-        <td><%=model.model_name%></td>
-        <td><%=model.quantity%></td>
+        <td><%=brand.brand_name%></td>
       </tr>
       <% end %>
     </tbody>
