add model and quantity page set up

--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -1,9 +1,19 @@
 <a href="/">HOME</a>
 
 <form method="post" action="/models">
-  <label for="model_name">Model Name:</label>
-    <input id="model_name" type="text" name="model_name" />
-    <label for="quantity">Quantity:</label>
-      <input id="quantity" type="number" name="quantity" />
-    <input type='submit' value="Submit"/>
+
+  <select name="brand_name" id="brand_name">
+    <% @brands.each do |brand| %>
+    <option value=<%= brand.id %>><%= brand.brand_name %></option>
+    <% end %>
+  </select>
+
+<label for="model_name">Model Name:</label>
+<input id="model_name" type="text" name="model_name" />
+
+<label for="quantity">Quantity:</label>
+<input id="quantity" type="number" name="quantity" />
+
+<input type='submit' value="Submit"/>
+
 </form>
