--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -2,7 +2,7 @@
 
 <form method="post" action="/models">
 
-  <select name="brand_name" id="brand_name">
+  <select name="brand_id" id="brand_id">
     <% @brands.each do |brand| %>
     <option value=<%= brand.id %>><%= brand.brand_name %></option>
     <% end %>
