added stock level for all inventory items

--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -11,6 +11,7 @@
         <th>Brand Name</th>
         <th>Model Name</th>
         <th>Quantity</th>
+        <th>Stock Level</th>
         <th></th>
       </tr>
     </thead>
@@ -22,6 +23,7 @@
         <td><%=model.brand.brand_name%></td>
         <td><%=model.model_name%></td>
         <td><%=model.quantity%></td>
+        <td><%=model.stock_level%></td>
       </tr>
       <% end %>
     </tbody>
