added style to models, refactored class and updated form

--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -10,6 +10,7 @@
       <tr>
         <th>Brand Name</th>
         <th>Model Name</th>
+        <th>Style</th>
         <th>Quantity</th>
         <th>Stock Level</th>
         <th></th>
@@ -22,6 +23,7 @@
 
         <td><%=model.brand.brand_name%></td>
         <td><%=model.model_name%></td>
+        <td><%=model.style%></td>
         <td><%=model.quantity%></td>
         <td><%=model.stock_level%></td>
       </tr>
