--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -11,6 +11,9 @@
 <label for="model_name">Model Name:</label>
 <input id="model_name" type="text" name="model_name" />
 
+<label for="style">Style:</label>
+<input id="style" type="text" name="style" />
+
 <label for="quantity">Quantity:</label>
 <input id="quantity" type="number" name="quantity" />
 
