--- a/views/brands/new.erb
+++ b/views/brands/new.erb
@@ -1,7 +1,7 @@
 <a href="/">HOME</a>
 
 <form method="post" action="/brands">
-  <label for="brand_name">Brand Name:</label>
-    <input id="brand_name" type="text" name="brand_name" />
+  <label for="brand_name">Brand Name:</label><div>
+    <input id="brand_name" type="text" name="brand_name" /><div>
     <input type='submit' value="Submit"/>
 </form>
