buy and sell price model/new  created

--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -17,6 +17,12 @@
 <label for="quantity">Quantity:</label><div>
 <input id="quantity" type="number" name="quantity" /><div>
 
+<label for="buy_price">Buy Price:</label><div>
+<input id="buy_price" type="number" name="buy_price" /><div>
+
+<label for="sell_price">Sell Price:</label><div>
+<input id="sell_price" type="number" name="sell_price" /><div>
+
 <input type='submit' value="Submit"/>
 
 </form>
