markup method created for buy and sell

--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -13,6 +13,8 @@
         <th>Style</th>
         <th>Quantity</th>
         <th>Stock Level</th>
+        <th>Buy Price</th>
+        <th>Retail Price</th>
         <th></th>
       </tr>
     </thead>
@@ -26,6 +28,8 @@
         <td><%=model.style%></td>
         <td><%=model.quantity%></td>
         <td><%=model.stock_level%></td>
+        <td><%=model.buy_price%></td>
+        <td><%=model.sell_price%></td>
       </tr>
       <% end %>
     </tbody>
