--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -20,7 +20,7 @@
 <label for="buy_price">Buy Price:</label><div>
 <input id="buy_price" type="number" name="buy_price" /><div>
 
-<label for="sell_price">Sell Price:</label><div>
+<label for="sell_price">Retail Price:</label><div>
 <input id="sell_price" type="number" name="sell_price" /><div>
 
 <input type='submit' value="Submit"/>
