background image added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Rick's Sneaker Shop</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href = "/css/style.css">
 </head>
 <body>
 <h1>Rick's Sneaker Store</h1>
