--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -18,10 +18,10 @@
 <input id="quantity" type="number" name="quantity" /><div>
 
 <label for="buy_price">Buy Price:</label><div>
-<input id="buy_price" type="number" name="buy_price" /><div>
+<input id="buy_price" type="number" step="0.01" name="buy_price" /><div>
 
 <label for="sell_price">Retail Price:</label><div>
-<input id="sell_price" type="number" name="sell_price" /><div>
+<input id="sell_price" type="number" step="0.01" name="sell_price" /><div>
 
 <input type='submit' value="Submit"/>
 
