--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -2,6 +2,18 @@
 <a href="/brands/new">ADD BRAND</a>
 <a href="/models/new">ADD MODEL</a>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css"
+    <title></title>
+  </head>
+  <body>
+
+
+
+
 <table style="width:100%">
 <section>
   <h2>All Stock</h2>
@@ -15,6 +27,7 @@
         <th>Stock Level</th>
         <th>Buy Price</th>
         <th>Retail Price</th>
+        <th>Profit</th>
         <th></th>
       </tr>
     </thead>
@@ -28,10 +41,14 @@
         <td><%=model.style%></td>
         <td><%=model.quantity%></td>
         <td><%=model.stock_level%></td>
-        <td><%=model.buy_price%></td>
-        <td><%=model.sell_price%></td>
+        <td>£<%=model.buy_price%></td>
+        <td>£<%=model.sell_price%></td>
+        <td><%=model.calc_markup%>%</td>
+
       </tr>
       <% end %>
     </tbody>
   </table>
 </section>
+  </body>
+</html>
