logo and buttons changed in css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,18 @@
 <html>
 <head>
   <title>Rick's Sneaker Shop</title>
+
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href = "/css/style.css">
+
+  <link rel="stylesheet" type="text/css" href="/styles/structure.css">
+
 </head>
 <body>
-<h1>Rick's Sneaker Store</h1>
+
+
+  <h1 class="logo">RICK'S<div> SNEAKER<div> SHOP</h1>
+<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+
   <%= yield %>
 </body>
 </html>
