--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,3 @@
-<a href="/brands/new">ADD BRAND</a><div>
-<a href="/models/new">ADD MODEL</a><div>
-<a href="/models">CHECK STOCK</a><div>
+<a href="/brands/new">ADD BRAND</a>
+<a href="/models/new">ADD MODEL</a>
+<a href="/models">CHECK STOCK</a>
