--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -39,7 +39,7 @@
         <td><%=model.model_name%></td>
         <td><%=model.style%></td>
         <td><%=model.quantity%></td>
-        <td><%=model.stock_level%></td>
+        <td class="<%=model.stock_level_css%>"><%=model.stock_level%></td>
         <td>£<%=model.buy_price%></td>
         <td>£<%=model.sell_price%></td>
         <td><%=model.calc_markup%>%</td>
