--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Rick's Sneaker Shop</title>
 
-  <meta charset="utf-8">
+  <head>
+    <title>Rick's Sneaker Shop</title>
 
-  <link rel="stylesheet" type="text/css" href="/styles/structure.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/styles/structure.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-</head>
-<body>
+  </head>
 
+  <body>
+    <header>
+      <div class="logo">
+        <h1>RICK'S SNEAKER SHOP</h1>
+      </div>
+    </header>
 
-  <h1 class="logo">RICK'S<div> SNEAKER<div> SHOP</h1>
-<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <section class="main">
+      <%= yield %>
+    </section>
 
-  <%= yield %>
-</body>
+  </body>
+
 </html>
