--- a/views/models/new.erb
+++ b/views/models/new.erb
@@ -1,4 +1,10 @@
-<a href="/">HOME</a>
+<nav>
+  <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/brands/new">ADD BRAND</a></li>
+    <li><a href="/models">CHECK STOCK</a></li>
+  </ul>
+</nav>
 
 <form method="post" action="/models">
 
