--- a/views/brands/new.erb
+++ b/views/brands/new.erb
@@ -1,4 +1,11 @@
-<a href="/">HOME</a>
+<nav>
+  <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/models/new">ADD MODEL</a></li>
+    <li><a href="/models">CHECK STOCK</a></li>
+  </ul>
+</nav>
+
 
 <form method="post" action="/brands">
   <label for="brand_name">Brand Name:</label><div>
