--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,7 @@
-<a href="/brands/new">ADD BRAND</a>
-<a href="/models/new">ADD MODEL</a>
-<a href="/models">CHECK STOCK</a>
+<nav>
+  <ul>
+    <li><a href="/brands/new">ADD BRAND</a></li>
+    <li><a href="/models/new">ADD MODEL</a></li>
+    <li><a href="/models">CHECK STOCK</a></li>
+  </ul>
+</nav>
