--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -1,22 +1,13 @@
-<a href="/">HOME</a>
-<a href="/brands/new">ADD BRAND</a>
-<a href="/models/new">ADD MODEL</a>
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css"
-    <title></title>
-  </head>
-  <body>
-
-
-
+<nav>
+  <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/brands/new">ADD BRAND</a></li>
+    <li><a href="/models/new">ADD MODEL</a></li>
+  </ul>
+</nav>
 
 <table style="width:100%">
 <section>
-  <h2>All Stock</h2>
   <table>
     <thead>
       <tr>
@@ -48,5 +39,3 @@
     </tbody>
   </table>
 </section>
-  </body>
-</html>
