Add brand and model forms edited in css

--- a/views/brands/new.erb
+++ b/views/brands/new.erb
@@ -6,9 +6,18 @@
   </ul>
 </nav>
 
+<section class="form-center">
 
-<form method="post" action="/brands">
-  <label for="brand_name">Brand Name:</label><div>
-    <input id="brand_name" type="text" name="brand_name" /><div>
-    <input type='submit' value="Submit"/>
-</form>
+    <form method="post" action="/brands">
+      <div>
+        <label for="brand_name">Brand Name:</label>
+      </div>
+      <div>
+        <input id="brand_name" type="text" name="brand_name"/>
+      </div>
+      <div>
+        <button>Add New Brand >></button>
+      </div>
+    </form>
+
+</section>
