navigation buttons finalised

--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -28,15 +28,15 @@ table {
 }
 
 td, th {
-    border: 2px solid #dddddd;
-    border-color: black;
-    background-color: #dddddd;
-    text-align: center;
-    padding: 8px;
+  border: 2px solid #dddddd;
+  border-color: black;
+  background-color: #dddddd;
+  text-align: center;
+  padding: 8px;
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+  background-color: #dddddd;
 }
 
 
@@ -52,6 +52,10 @@ tr:nth-child(even) {
   background-color: red;
 }
 
+.stock_level_out_of_stock {
+  background-color: red;
+}
+
 .form-center {
   width: 200px;
   margin: 0 auto;
@@ -63,11 +67,13 @@ tr:nth-child(even) {
   padding-top: 20;
   padding-bottom: 20;
   font-size: 22px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .form-center form label {
   font-size: 30px;
   color: black;
+  font-family: 'Roboto', sans-serif;
 }
 
 .form-center form button{
@@ -77,4 +83,56 @@ tr:nth-child(even) {
   font-size: 20px;
   width: 233px;
   margin-left: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.nav-blocks {
+  padding: 10;
+  width: 500px;
+  margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+
+
+
+}
+
+
+
+nav ul li a {
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+  height:125px;
+  width:250px;
+}
+
+a {
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+}
+
+
+
+.nav-blocks nav ul li {
+  border: 2px solid black;
+  display: inline;
+  background-color: white;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.nav-blocks nav ul {
+  list-style-type: none;
+  min-width: 696px;
+}
+
+#brand_id {
+  width: 235px;
+  height: 30px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
