--- a/views/brands/new.erb
+++ b/views/brands/new.erb
@@ -1,10 +1,13 @@
-<nav>
-  <ul>
-    <li><a href="/">HOME</a></li>
-    <li><a href="/models/new">ADD MODEL</a></li>
-    <li><a href="/models">CHECK STOCK</a></li>
-  </ul>
-</nav>
+<section class="nav-blocks">
+  <nav>
+    <ul>
+      <li><a href="/">HOME</a></li>
+      <li><a href="/models/new">ADD MODEL</a></li>
+      <li><a href="/models">CHECK STOCK</a></li>
+    </ul>
+  </nav>
+</section>
+
 
 <section class="form-center">
 
