--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,9 @@
-<nav>
-  <ul>
-    <li><a href="/brands/new">ADD BRAND</a></li>
-    <li><a href="/models/new">ADD MODEL</a></li>
-    <li><a href="/models">CHECK STOCK</a></li>
-  </ul>
-</nav>
+<section class="nav-blocks">
+  <nav>
+    <ul>
+      <li><a href="/brands/new">ADD BRAND</a></li>
+      <li><a href="/models/new">ADD MODEL</a></li>
+      <li><a href="/models">CHECK STOCK</a></li>
+    </ul>
+  </nav>
+</section>
