--- a/views/models/index.erb
+++ b/views/models/index.erb
@@ -1,10 +1,12 @@
-<nav>
-  <ul>
-    <li><a href="/">HOME</a></li>
-    <li><a href="/brands/new">ADD BRAND</a></li>
-    <li><a href="/models/new">ADD MODEL</a></li>
-  </ul>
-</nav>
+<section class="nav-blocks">
+  <nav>
+    <ul>
+      <li><a href="/">HOME</a></li>
+      <li><a href="/brands/new">ADD BRAND</a></li>
+      <li><a href="/models/new">ADD MODEL</a></li>
+    </ul>
+  </nav>
+</section>
 
 <table style="width:100%">
 <section>
